Fixed dark mode issues
Fixed issues in dark mode on the installation guide and the Get Haiku! page.

--- a/themes/shijin4/static/css/shijin4.css
+++ b/themes/shijin4/static/css/shijin4.css
@@ -539,7 +539,6 @@ figure {	/* Use for step-by-step guides consisting mainly of */
 	padding: 10px;
 	border: 1px solid gainsboro;
 	background: white;
-	color:black;
 }
 @media (min-width:768px) {
 	figure {
@@ -659,7 +658,6 @@ footer a, footer span.glyphicon {
 		color: #DDDFFF;
 	}
 	div.node table th {
-		color: #CCC;
 		background-color: #333;
 	}
 	div.node h2 {
@@ -745,13 +743,13 @@ footer a, footer span.glyphicon {
 	        border-width: 1px;
 	        padding: 3px 2px 0px 2px;
 	        background-color: #444;
-	        font-family: serif;
+	        font-family: 'Noto Sans', sans-serif;
 	        font-variant: small-caps;
-	        font-size: 0.8em;
+	        font-size: 0.9em;
 	}
 	.menu {                         /* Menu */
 	        font-size: 1.0em;
-	        font-family: serif;
+	        font-family: 'Noto Sans', sans-serif;
 	        font-style: italic;
 	        color: #7f7cd0;
 	}
@@ -761,5 +759,12 @@ footer a, footer span.glyphicon {
 	        font-family: monospace;
 		padding: 2px;
 		border-radius: 3px;
+	}
+	.step, .caption, {
+		color: black;
+	}
+	.link:hover {
+		background-color:#444;
+		color:white;
 	}
 }
